tests/NormalTests/paczka1/small_fuzzy/23226141.err
Error in line 1: fjPUhq A776 40,7
Error in line 9: NufRWpoKu8 S161 58,06
Error in line 8: fjPUhq S618 44,6
